--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
